--- a/blackjack.css
+++ b/blackjack.css
@@ -19,7 +19,7 @@ h1 {
 
 .centre {
     margin-top: 40px;
-    margin-bottom: 30px;;
+    margin-bottom: 30px;
     display: flex;
     flex-direction:row-reverse;
     justify-content: center;
@@ -39,14 +39,13 @@ h1 {
     margin: 2px;
 }
 
-#hit {
+#hit, #stay, #newGame{
     width: 100px;
     height: 50px;
     font-size: 25px;
     background-color: #4CAF50;
     border: none;
     color: white;
-    padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -56,21 +55,8 @@ h1 {
     border-radius: 50%;
 }
 
-#stay {
-    width: 100px;
-    height: 50px;
-    font-size: 25px;
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 50%;
+#newGame{
+    background-color: #ff8c00;
 }
 
 #chip_100{
@@ -108,7 +94,7 @@ h2{
     text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
 }
 
-.botton {
+.button {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     grid-gap: 10px;
